fix: collapse

--- a/src/styles/element/button.scss
+++ b/src/styles/element/button.scss
@@ -21,7 +21,17 @@
   // --el-button-active-border-color: #DFE1ED !important;
   // --el-button-active-bg-color: #fff !important;
 
-  
+  &.is-link{
+    &:focus {
+      color: #495AD4 !important;
+    }
+
+    &:not(.is-disabled):hover, &:not(.is-disabled):focus{
+      border-color: transparent !important;
+      background-color: transparent !important;
+      text-decoration: underline;
+    }
+  }
 }
 
 .el-button--default { 
@@ -41,12 +51,14 @@
     outline: none;
   }
 
+  --el-button-hover-link-text-color: #495AD4 !important;
+
   // --el-button-hover-text-color: #fff !important;
   // --el-button-hover-bg-color: #495AD4 !important;
   // --el-button-hover-border-color: #495AD4 !important;
 }
 
-.el-button.is-link:not(.is-disabled):hover, .el-button.is-link:not(.is-disabled):focus {
-  border-color: transparent !important;
-  background-color: transparent  !important;
+.el-button__text--expand{
+  letter-spacing: 0 !important;
+  margin-right: 0 !important;
 }
