--- a/src/styles/element/modal.scss
+++ b/src/styles/element/modal.scss
@@ -13,8 +13,8 @@
 }
 
 .el-dialog__headerbtn{
-  width: 24px;
-  height: 24px;
+  width: 24px !important;
+  height: 24px !important;
   top: 12px !important;
   right: 16px !important;
 
